fix: layout issues

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -140,6 +140,12 @@
     @apply bg-background text-foreground;
   }
 
+  html,
+  body,
+  #root {
+    height: 100%;
+  }
+
   .github-corner:hover .octo-arm {
     animation: octocat-wave 560ms ease-in-out;
   }
